[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/evil_corp/Projects.gd" type="Script" id=1]

[node name="Projects" type="MarginContainer"]
margin_left = 500.0
margin_top = 100.0
margin_right = 800.0
margin_bottom = 140.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 300.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.101961, 0.0156863, 0.462745, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 300.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 14.0
text = "Projects"
align = 1

[node name="ResearchContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 300.0
margin_bottom = 32.0

[node name="MoneyProjects" type="VBoxContainer" parent="VBoxContainer/ResearchContainer"]
margin_right = 99.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MoneyProjectsText" type="Label" parent="VBoxContainer/ResearchContainer/MoneyProjects"]
margin_right = 99.0
margin_bottom = 14.0
text = "Money Projects"

[node name="Control" type="Control" parent="VBoxContainer/ResearchContainer"]
margin_left = 103.0
margin_right = 182.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="ResearchProjects" type="VBoxContainer" parent="VBoxContainer/ResearchContainer"]
margin_left = 186.0
margin_right = 300.0
margin_bottom = 14.0

[node name="ResearchProjectsText" type="Label" parent="VBoxContainer/ResearchContainer/ResearchProjects"]
margin_right = 114.0
margin_bottom = 14.0
text = "Research Projects"
